# telegramRedirect

./: .gitignore  docker-compose.yml
.github/workflows/: build.yml
app/: Dockerfile  main.py  pyproject.toml  utils.py
app/commands/: list_shortcodes.py  update_nginx.py
app/conversations/: add_shortcode.py  del_shortcode.py  list_shortcodes.py
nginx/: Dockerfile  entrypoint.sh  nginx.conf
